tooling/nargo_cli/tests/snapshots/execution_success/array_dynamic_nested_blackbox_input/execute__tests__force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "struct",
            "path": "Foo",
            "fields": [
              {
                "name": "a",
                "type": {
                  "kind": "field"
                }
              },
              {
                "name": "b",
                "type": {
                  "kind": "array",
                  "length": 3,
                  "type": {
                    "kind": "field"
                  }
                }
              },
              {
                "name": "bar",
                "type": {
                  "kind": "struct",
                  "path": "Bar",
                  "fields": [
                    {
                      "name": "inner",
                      "type": {
                        "kind": "array",
                        "length": 3,
                        "type": {
                          "kind": "integer",
                          "sign": "unsigned",
                          "width": 8
                        }
                      }
                    }
                  ]
                }
              }
            ]
          }
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      },
      {
        "name": "hash_result",
        "type": {
          "kind": "array",
          "length": 32,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 8
          }
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "14225679739041873922": {
        "error_kind": "string",
        "string": "Index out of bounds"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+1c23IbRRAdSbuWVrKxkhAghIvDLZBAWN0s80KFSnhI8uLkJQm5rmQ79/s9T/tTVPEGVXwFP8E3QNvb0lGrRxblHYepaKpcu9o5232mp3umZ2bLBbNVOv/+FbL7ILuWsis9329GC2OPZ9d4Z6WRo6zYFceCBxyLHnAsecAx8IBj6AHHOQ84lj3gWPGAY+QBx6oHHGsecJz3gOOCBxzf8YDjogcc6x5w3OMBx70ecNznAcd3HXB0wXN/jjyJ25IZLXnzfc+Dvn/fA44feMDxgAccP/SA40EPOH7kAcePPeD4iQccP/WA45IHHA95wPEzDzh+7gHHLzzg+KUHHL/ygONhDzh+7QHHbzzgeMQDjkc94PitBxy/84DjMQ84fu8Bx9gDjg0PODY94NjygGPbA44dBxw3C368QqTpIwn6CIEO+ekQnQ6p6RCYDlnpEJMOCekQjg656BCJDmnoEIQOGWgTnzbJaROaNnkPgQ7anKTNP9pco80r2hyizRfa3KDNA1qc0+J3KXuPFke0+KDknpJnSk4p+aPkipIXSg5o8qXJjSYPGpxp8KPWUfBScJDzUed2zHjhDlrNbqLsdxHqc/wYoxEJvXnKX4m7vUhpX478W1EmM3Aiv7XM8kM3/ONyJufndCgf28J6+cOuU+nQlqfgnQJgTgPmtAVzBjBnLJhVwKxaMGcBc9aCOQeYcxbMecCct2AuAOaCBXMRMBctmEuAuWTBXAbMZQvmCmCuWDBXAXPVgrkGmGsWzHXAXLdgEsAkFkwPMD0Lpg+YvgWzBpg1C2YdMOsWzAZgNiyYG4C5YcHcBMxNC+YWYG5ZMLcBc9uCuQOYOxbMXcDctWDuAeaeBXMfMPctmAeAeWDBPATMQwvmEWAeWTCPAfPYgnkCmCcWzFPAPLVgngHmmQXzHDDPLZgXgHlhwbwEzEsL5hVgXlkwrwHzWmAiuDcm77m23XE8V/2wYEbnJwNtYd1zbnQnBaHPmNGPnY3QXzUu84KtD4tRH/OR9ikK+1Tc8IlZfuRIPre3qrQX7c/tW8x+l6GuCvc2Weg/3Ja68n55d+zacGzXxn+1K/OZd8OnxTFeAz4yxhfc6G5PG+Osvyq4uuqbBTPeN2gfjnHGldIhn6qoC9LxdvA1hDruX+r3X6F9WId8JsUN+grzdhw3bcdx05zFzaDM4gbqPI+bruO4ab2l8/iKY7u2Z+PRqC1QH9vCmNl4xM89GY96juOmM4ubQZnFDdR5HjfrjuNm+S2dxzcc27U7G48GZTYeQZ3f41Gj6ThuVmZxMyizuIE613GzYMZ9LBB1RdDzS7p1ZR/AfsnvLKbTc3sW04zf3FlMszGtf/9fz2I0/y6JuiAdb4fm39y/6N8LZty3AsD9Afd/Zvduzwa7A3909B1RvE/hj7qolFMzKGybEjxju7KdK4gXdRHUBemonmr2OwA9KIt5hAL/e/Z7MbvOwTv8fl3RPyf0j/BWnkm7RAo+UvDkh79l9zT+8fh4Ih2Vdzy7xjsrg2/DToL8POOW2kAxMJ8R177lKuSmbznRxuQc5fe0cTc/+XHC4wqvtVgH2s7Vec60Yz7rrwqursb8iuAj7YNjvsx/+d26Uid9MFL0RIoeTVaYoyz2LRkrVI5n13hnpWHjXVTsU1LqZM6jxbWLMw3WG1p4BVCP+L+yK/nD3sJomxlT3EZmwYz3R0nIoHIy3bq6zdGG56OVCXy0sSpU8IHCX8uheBxgfw1SJ21LqE37C0MekmMoOE2bF06KT7QT20iLz7KQtZ09pW6NK/aX3M/T8u1Fo/umMUO/c/U9s2xHYGlHAO2X9kUbhOLZ39mV7HBUxKoWe5qt62bcdoGwj5scJI7fYNy0tbgZsbXgVFbsOafYc5q5GMfNusCjveV63phx33Wzhpl+Xcv6q2bcj1zkOEXFrlo/7NY8q/lFQeGzxwzj2zZnsqyl3WnDsub3XGR+je3iOplfGzPadrQLFmwTyTgGcShxkg/ajrmFoq6WvehyH4HKXsETdeGaNEjz199d2ZpfNu2bDu0gbY36Q4HfkwnAsyu+7uQfyG50k8ZGK9lIOsnaWrufSDtRGfSVA/39znKv3+4k8XqDfja306/tceCcRIX3SXAfBfEsLxT4A5kAirGDws9DRR/hjkzAFSzXTRnKsyAdfabtr+C+E+MH+/HpOEeuq0EdzpdU5rPfaC+UxTxCgT+cCeA+wb0ifr+u6K8I/SO8lWdy36mm4GsKnvpnScQNtj3vOW9Tp5CPzyQ39h0XcZV0Wyv9Zrvf7XVaSWt527jG/axJe/TT+rLMmVAW7/txvi/X61QcrzNjmRNgvq+tmYpmfI7FfCIUz1ayhmj5vra2CifYrqDwcb0eipT2ujgHKiltI/v/aLEZ7pHguzK/YPwJGNN/gvFK2pX9s2Z0v5TrKm3NoPk/P9fW5lpOxrq188RJsooTdGtn29EE3ciratEdwDPkWhH4OYVTqLRNjhNSri1uMIc6mW5dp/WtfwCs/ABGkWIAAA==",
  "debug_symbols": "pdXNbuowEAXgd8k6C8/4n1epEAoQqkhRQClc6Qrl3e9Mcgx00as23fCNCXOw7Di5V8d2f3vfdcPp/FFt3u7Vfuz6vnvf9edDc+3Og3x7r4x+UA7VhmoxwgTzLBsDCTK00EEPA4wwQeSR5LFKkKGFDnoYoORZNcG8yAYSZGihgx4GiDxGHkueE62BBBla6KCHAUaYIPKc5HmVIEMLHfQwwAglL6h50RtIkKGFDnooeVGNMMG8GAwkyNBCBz1c8qyx0EEP5XpSI0wwL+r+zxJkaKH8Pou6n2S00BuNtNA7jbXwpQil0JvNapFKkVHofpLXQgODFlwKTQ7TVFflXOyuY9vqsXg5KHJ8Ls3YDtdqM9z6vq7+NP1t/tHHpRlmr80oV2Wy7XAUJfDU9a1WU/3sNl+3ymqjWdb50e6/328f/Tat6qdHf17Tn8v/W0Mr+p0P6HfRrunPDv2e1/R7m0u/Dyv65elZFlDKlx1cFZDo5wHyHC5LKI9iXjOD/AwwvGYG5hlAdk0AxUcA+9/OIHwRQO4/iyDLWLZB3ji/XEX+NIWtDJpDN356CU8aNXbNvm8xPN2Gw8vV699LuVJe4pfxfGiPt7HVpOebXD7eOMaac9rKw01GlKimTDKi+WJINUerQ9JhzrWc1u2kU/sH",
  "file_map": {
    "5": {
      "source": "use crate::meta::derive_via;\n\n#[derive_via(derive_eq)]\n// docs:start:eq-trait\npub trait Eq {\n    fn eq(self, other: Self) -> bool;\n}\n// docs:end:eq-trait\n\n// docs:start:derive_eq\ncomptime fn derive_eq(s: TypeDefinition) -> Quoted {\n    let signature = quote { fn eq(_self: Self, _other: Self) -> bool };\n    let for_each_field = |name| quote { (_self.$name == _other.$name) };\n    let body = |fields| {\n        if s.fields_as_written().len() == 0 {\n            quote { true }\n        } else {\n            fields\n        }\n    };\n    crate::meta::make_trait_impl(\n        s,\n        quote { Eq },\n        signature,\n        for_each_field,\n        quote { & },\n        body,\n    )\n}\n// docs:end:derive_eq\n\nimpl Eq for Field {\n    fn eq(self, other: Field) -> bool {\n        self == other\n    }\n}\n\nimpl Eq for u128 {\n    fn eq(self, other: u128) -> bool {\n        self == other\n    }\n}\nimpl Eq for u64 {\n    fn eq(self, other: u64) -> bool {\n        self == other\n    }\n}\nimpl Eq for u32 {\n    fn eq(self, other: u32) -> bool {\n        self == other\n    }\n}\nimpl Eq for u16 {\n    fn eq(self, other: u16) -> bool {\n        self == other\n    }\n}\nimpl Eq for u8 {\n    fn eq(self, other: u8) -> bool {\n        self == other\n    }\n}\nimpl Eq for u1 {\n    fn eq(self, other: u1) -> bool {\n        self == other\n    }\n}\n\nimpl Eq for i8 {\n    fn eq(self, other: i8) -> bool {\n        self == other\n    }\n}\nimpl Eq for i16 {\n    fn eq(self, other: i16) -> bool {\n        self == other\n    }\n}\nimpl Eq for i32 {\n    fn eq(self, other: i32) -> bool {\n        self == other\n    }\n}\nimpl Eq for i64 {\n    fn eq(self, other: i64) -> bool {\n        self == other\n    }\n}\n\nimpl Eq for () {\n    fn eq(_self: Self, _other: ()) -> bool {\n        true\n    }\n}\nimpl Eq for bool {\n    fn eq(self, other: bool) -> bool {\n        self == other\n    }\n}\n\nimpl<T, let N: u32> Eq for [T; N]\nwhere\n    T: Eq,\n{\n    fn eq(self, other: [T; N]) -> bool {\n        let mut result = true;\n        for i in 0..self.len() {\n            result &= self[i].eq(other[i]);\n        }\n        result\n    }\n}\n\nimpl<T> Eq for [T]\nwhere\n    T: Eq,\n{\n    fn eq(self, other: [T]) -> bool {\n        let mut result = self.len() == other.len();\n        for i in 0..self.len() {\n            result &= self[i].eq(other[i]);\n        }\n        result\n    }\n}\n\nimpl<let N: u32> Eq for str<N> {\n    fn eq(self, other: str<N>) -> bool {\n        let self_bytes = self.as_bytes();\n        let other_bytes = other.as_bytes();\n        self_bytes == other_bytes\n    }\n}\n\nimpl<A, B> Eq for (A, B)\nwhere\n    A: Eq,\n    B: Eq,\n{\n    fn eq(self, other: (A, B)) -> bool {\n        self.0.eq(other.0) & self.1.eq(other.1)\n    }\n}\n\nimpl<A, B, C> Eq for (A, B, C)\nwhere\n    A: Eq,\n    B: Eq,\n    C: Eq,\n{\n    fn eq(self, other: (A, B, C)) -> bool {\n        self.0.eq(other.0) & self.1.eq(other.1) & self.2.eq(other.2)\n    }\n}\n\nimpl<A, B, C, D> Eq for (A, B, C, D)\nwhere\n    A: Eq,\n    B: Eq,\n    C: Eq,\n    D: Eq,\n{\n    fn eq(self, other: (A, B, C, D)) -> bool {\n        self.0.eq(other.0) & self.1.eq(other.1) & self.2.eq(other.2) & self.3.eq(other.3)\n    }\n}\n\nimpl<A, B, C, D, E> Eq for (A, B, C, D, E)\nwhere\n    A: Eq,\n    B: Eq,\n    C: Eq,\n    D: Eq,\n    E: Eq,\n{\n    fn eq(self, other: (A, B, C, D, E)) -> bool {\n        self.0.eq(other.0)\n            & self.1.eq(other.1)\n            & self.2.eq(other.2)\n            & self.3.eq(other.3)\n            & self.4.eq(other.4)\n    }\n}\n\nimpl Eq for Ordering {\n    fn eq(self, other: Ordering) -> bool {\n        self.result == other.result\n    }\n}\n\n// Noir doesn't have enums yet so we emulate (Lt | Eq | Gt) with a struct\n// that has 3 public functions for constructing the struct.\npub struct Ordering {\n    result: Field,\n}\n\nimpl Ordering {\n    // Implementation note: 0, 1, and 2 for Lt, Eq, and Gt are built\n    // into the compiler, do not change these without also updating\n    // the compiler itself!\n    pub fn less() -> Ordering {\n        Ordering { result: 0 }\n    }\n\n    pub fn equal() -> Ordering {\n        Ordering { result: 1 }\n    }\n\n    pub fn greater() -> Ordering {\n        Ordering { result: 2 }\n    }\n}\n\n#[derive_via(derive_ord)]\n// docs:start:ord-trait\npub trait Ord {\n    fn cmp(self, other: Self) -> Ordering;\n}\n// docs:end:ord-trait\n\n// docs:start:derive_ord\ncomptime fn derive_ord(s: TypeDefinition) -> Quoted {\n    let signature = quote { fn cmp(_self: Self, _other: Self) -> std::cmp::Ordering };\n    let for_each_field = |name| quote {\n        if result == std::cmp::Ordering::equal() {\n            result = _self.$name.cmp(_other.$name);\n        }\n    };\n    let body = |fields| quote {\n        let mut result = std::cmp::Ordering::equal();\n        $fields\n        result\n    };\n    crate::meta::make_trait_impl(s, quote { Ord }, signature, for_each_field, quote {}, body)\n}\n// docs:end:derive_ord\n\n// Note: Field deliberately does not implement Ord\n\nimpl Ord for u128 {\n    fn cmp(self, other: u128) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\nimpl Ord for u64 {\n    fn cmp(self, other: u64) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for u32 {\n    fn cmp(self, other: u32) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for u16 {\n    fn cmp(self, other: u16) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for u8 {\n    fn cmp(self, other: u8) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for i8 {\n    fn cmp(self, other: i8) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for i16 {\n    fn cmp(self, other: i16) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for i32 {\n    fn cmp(self, other: i32) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for i64 {\n    fn cmp(self, other: i64) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for () {\n    fn cmp(_self: Self, _other: ()) -> Ordering {\n        Ordering::equal()\n    }\n}\n\nimpl Ord for bool {\n    fn cmp(self, other: bool) -> Ordering {\n        if self {\n            if other {\n                Ordering::equal()\n            } else {\n                Ordering::greater()\n            }\n        } else if other {\n            Ordering::less()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl<T, let N: u32> Ord for [T; N]\nwhere\n    T: Ord,\n{\n    // The first non-equal element of both arrays determines\n    // the ordering for the whole array.\n    fn cmp(self, other: [T; N]) -> Ordering {\n        let mut result = Ordering::equal();\n        for i in 0..self.len() {\n            if result == Ordering::equal() {\n                result = self[i].cmp(other[i]);\n            }\n        }\n        result\n    }\n}\n\nimpl<T> Ord for [T]\nwhere\n    T: Ord,\n{\n    // The first non-equal element of both arrays determines\n    // the ordering for the whole array.\n    fn cmp(self, other: [T]) -> Ordering {\n        let mut result = self.len().cmp(other.len());\n        for i in 0..self.len() {\n            if result == Ordering::equal() {\n                result = self[i].cmp(other[i]);\n            }\n        }\n        result\n    }\n}\n\nimpl<A, B> Ord for (A, B)\nwhere\n    A: Ord,\n    B: Ord,\n{\n    fn cmp(self, other: (A, B)) -> Ordering {\n        let result = self.0.cmp(other.0);\n\n        if result != Ordering::equal() {\n            result\n        } else {\n            self.1.cmp(other.1)\n        }\n    }\n}\n\nimpl<A, B, C> Ord for (A, B, C)\nwhere\n    A: Ord,\n    B: Ord,\n    C: Ord,\n{\n    fn cmp(self, other: (A, B, C)) -> Ordering {\n        let mut result = self.0.cmp(other.0);\n\n        if result == Ordering::equal() {\n            result = self.1.cmp(other.1);\n        }\n\n        if result == Ordering::equal() {\n            result = self.2.cmp(other.2);\n        }\n\n        result\n    }\n}\n\nimpl<A, B, C, D> Ord for (A, B, C, D)\nwhere\n    A: Ord,\n    B: Ord,\n    C: Ord,\n    D: Ord,\n{\n    fn cmp(self, other: (A, B, C, D)) -> Ordering {\n        let mut result = self.0.cmp(other.0);\n\n        if result == Ordering::equal() {\n            result = self.1.cmp(other.1);\n        }\n\n        if result == Ordering::equal() {\n            result = self.2.cmp(other.2);\n        }\n\n        if result == Ordering::equal() {\n            result = self.3.cmp(other.3);\n        }\n\n        result\n    }\n}\n\nimpl<A, B, C, D, E> Ord for (A, B, C, D, E)\nwhere\n    A: Ord,\n    B: Ord,\n    C: Ord,\n    D: Ord,\n    E: Ord,\n{\n    fn cmp(self, other: (A, B, C, D, E)) -> Ordering {\n        let mut result = self.0.cmp(other.0);\n\n        if result == Ordering::equal() {\n            result = self.1.cmp(other.1);\n        }\n\n        if result == Ordering::equal() {\n            result = self.2.cmp(other.2);\n        }\n\n        if result == Ordering::equal() {\n            result = self.3.cmp(other.3);\n        }\n\n        if result == Ordering::equal() {\n            result = self.4.cmp(other.4);\n        }\n\n        result\n    }\n}\n\n// Compares and returns the maximum of two values.\n//\n// Returns the second argument if the comparison determines them to be equal.\n//\n// # Examples\n//\n// ```\n// use std::cmp;\n//\n// assert_eq(cmp::max(1, 2), 2);\n// assert_eq(cmp::max(2, 2), 2);\n// ```\npub fn max<T>(v1: T, v2: T) -> T\nwhere\n    T: Ord,\n{\n    if v1 > v2 {\n        v1\n    } else {\n        v2\n    }\n}\n\n// Compares and returns the minimum of two values.\n//\n// Returns the first argument if the comparison determines them to be equal.\n//\n// # Examples\n//\n// ```\n// use std::cmp;\n//\n// assert_eq(cmp::min(1, 2), 1);\n// assert_eq(cmp::min(2, 2), 2);\n// ```\npub fn min<T>(v1: T, v2: T) -> T\nwhere\n    T: Ord,\n{\n    if v1 > v2 {\n        v2\n    } else {\n        v1\n    }\n}\n\nmod cmp_tests {\n    use crate::cmp::{max, min};\n\n    #[test]\n    fn sanity_check_min() {\n        assert_eq(min(0 as u64, 1 as u64), 0);\n        assert_eq(min(0 as u64, 0 as u64), 0);\n        assert_eq(min(1 as u64, 1 as u64), 1);\n        assert_eq(min(255 as u8, 0 as u8), 0);\n    }\n\n    #[test]\n    fn sanity_check_max() {\n        assert_eq(max(0 as u64, 1 as u64), 1);\n        assert_eq(max(0 as u64, 0 as u64), 0);\n        assert_eq(max(1 as u64, 1 as u64), 1);\n        assert_eq(max(255 as u8, 0 as u8), 255);\n    }\n}\n",
      "path": "std/cmp.nr"
    },
    "50": {
      "source": "struct Bar {\n    inner: [u8; 3],\n}\n\nstruct Foo {\n    a: Field,\n    b: [Field; 3],\n    bar: Bar,\n}\n\nfn main(mut x: [Foo; 3], y: pub Field, hash_result: pub [u8; 32]) {\n    // Simple dynamic array set for entire inner most array\n    x[y - 1].bar.inner = [106, 107, 10];\n    let mut hash_input = x[y - 1].bar.inner;\n    // Make sure that we are passing a dynamic array to the black box function call\n    // by setting the array using a dynamic index here\n    hash_input[y - 1] = 0;\n    let hash = std::hash::blake3(hash_input);\n    assert_eq(hash, hash_result);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
