tooling/nargo_cli/tests/snapshots/execution_success/array_dynamic_nested_blackbox_input/execute__tests__force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "struct",
            "path": "Foo",
            "fields": [
              {
                "name": "a",
                "type": {
                  "kind": "field"
                }
              },
              {
                "name": "b",
                "type": {
                  "kind": "array",
                  "length": 3,
                  "type": {
                    "kind": "field"
                  }
                }
              },
              {
                "name": "bar",
                "type": {
                  "kind": "struct",
                  "path": "Bar",
                  "fields": [
                    {
                      "name": "inner",
                      "type": {
                        "kind": "array",
                        "length": 3,
                        "type": {
                          "kind": "integer",
                          "sign": "unsigned",
                          "width": 8
                        }
                      }
                    }
                  ]
                }
              }
            ]
          }
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      },
      {
        "name": "hash_result",
        "type": {
          "kind": "array",
          "length": 32,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 8
          }
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "14225679739041873922": {
        "error_kind": "string",
        "string": "Index out of bounds"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+1c23IbRRAdyStLu7KxkpCEOw6ESwIBXS3zhAsoKslLkpck5L6Wrdzv9zf9FFW8AX/BV/AN0Pa0dNQ7Iwuyk6QrmirXrHbOdp/pme7pndmkYLZL59+/gr2ObD1na7q/14wXxq7Zuv5ipZGjrHoojgUFHIsKOM4p4Bgp4FhSwHFeAceyAo4VBRxjBRwTBRyrCjguKOC4qIDjWwo4LingWFPAcZcCjrsVcNyjgOPbATiG4Lk3R57EbdmMl7z57lMw9vsVcHxHAcd3FXB8TwHH9xVw/EABxw8VcPxIAcePFXBcVsDxgAKOnyjg+KkCjgcVcPxMAcfPFXD8QgHHLxVwPKSA42EFHL9SwPFrBRyPKOD4jQKO3yrgWFfAsaGAY1MBx5YCjm0FHDsBOG4V/HiFSNNHEvQRAh3y0yE6HVLTITAdstIhJh0S0iEcHXLRIRId0tAhCB0y0CY+bZLTJjRt8h4AHbQ5SZt/tLlGm1e0OUSbL7S5QZsH9HJOL7/L9jl6OaKXD0ruKXmm5JSSP0quKHmh5IAWX1rcaPGg4EzBj3pHzkvOQZOPBrdjsoUH6Gd7EdvfRWjP8WOMRiz05il/td5NY0f/cuTfiq3MKIj81grLL4XhXy9bOT8NRvKxL6yXP+w6OhjZ8ig8UwDMMcAc82COA+a4B3MCMCc8mJOAOenBnALMKQ/mNGBOezBnAHPGgzkLmLMezDnAnPNgzgPmvAdzATAXPJiLgLnowVwCzCUP5jJgLnswVwBzxYNJAZN6MOuAWfdgeoDpeTAbgNnwYDYBs+nB9AHT92CuAuaqB3MNMNc8mOuAue7B3ADMDQ/mJmBuejC3AHPLg7kNmNsezB3A3PFg7gLmrgdzDzD3PJj7gLnvwTwAzAMP5iFgHnowjwDzyIN5DJjHHswTwDzxYJ4C5qkH8wwwzzyY54B5LjAxXBuT91rbbgdeq75bNOPrk4G+sO75MLrTgtBnzPjHzkboT0zIvGD7w2LUx3ykfYrCPpUwfOosPw4kn/ubOPqL9uf+LdnfZWhL4NonC+cP96XmeL78cuzaCGzXxn+1K/NZCMOnxT5eBT7SxxfD6G5P6+OsPxFcQ43NosmODdqHfZxxc4MRn0S0RYNsP7guQRuPL437r9A/bEM+k/wG5wrzDuw37cB+05z5zbDM/AbalPtNN7DftN7QdXw1sF3bs3g0bgvUx7YwZhaP+L6SeLQe2G86M78ZlpnfQJtyv9kM7Dcrb+g63g9s1+4sHg3LLB5Bm+541GgG9pvVmd8My8xvoC203yya7ByLRFsR9Pwy2K55DuC45HcW00nDnsU066/uLKbZmHZ+v65nMa75PSfaokG2H675zeOL83vRZOdWBLg/4PpPex32bLA7nI+BviOq73HwR11UygMzLGybObjHdmU7VxAv2mJoiwbjehL7OwI9KIt5lAT+d/t7ydbz8Aw/X3Ponxf6x3g77km7xA587MDTPPzNXlftH82hg1aQjDlU1mxdf7HSYL4YU+QYs17XXCvkxmXFGVtzlD/c8ygHkV9POT5UYJxk7A65T4n6jHHHbtafmJB56Sh2x4KPtA/GbsxHXHkCtsk56MpPE4cel6xSjrLK4jnkKdftsLnE6EyA9ZY8vKR/o3+Y/Phs/SdZyOcvW9N8OFwY6URMcUrOgWw4cR7PT+CThOEzPB+t7sBH7gG5cqjYwd+VQ2EMoxINgvQtpXlwpDDiIe1eEpySCX2iImOE670E7cQ2cr2XVISsSfZ06a448DhePJ5LZtzm+OySca/VxoT/Dkn6QWSy8Vz6rZxjY2Mp7v1ta5L1oycWuGzHuqjUTNZ288I+0nZrOdnnFfpNO7TfuGKNay2uCTzaW77PG5Odu2HeYaZ/r2X9icnOoxBrStFhV9c4hH3vn+7bAeSzy4z825ffsKxlW7v2bAqemvUbj/6aQzfnLNPEyEA5eOZbSoyRscNORZP1JRyDkrgX2468zBgZ4lvWMLlRdu8M+0L1ksdmmBfjswm0I35/YSRzt712rdtF8Ty37SuM2zvU3s1ukCs5VY3bV2Tsd+W9Lp+ctFbg3Gf7sm7MHapTyJqboNuV31Un6EZeCx7dkcnmcPJZbPPFQ5bnil3T5Jaufzs27XwPmX90V7fj3hZXK5/9SZYI2hF/yArAuGCgb2v/k2e/mzb6rbSfdtKNjXYvlf5ABf0hb/29zsp6r91J65sN+tncSb9rfxLzSSq8x4l7oIjHmIP4BsSslr2W+96oj3A/TMAVPPWWDMe9aDB+z7U3invGjB+epQ2yHLmtCm0loWfB/kZ7oSzmURL47yGuU8F9Xn6+5tBfEfrHeDvuyT3jqgNfdeBpfFaF32Df885Xt3QK+XhPcuO5E8Kv0m5rtdds97rrnVbaWtnRr/8Bi8YixFlhAAA=",
  "debug_symbols": "tdVNjuIwEAXgu2Sdhav8z1UQQgFCK1IUUJqMNEK5+1TBMzALRj1p9YbPIa7n4Bj7Wh3a3fSx7Ybj6bNara/Vbuz6vvvY9qd9c+lOg3x7rYx+UHbVimrRw1CtWI0wwXyTjYEEGVrooIcBRpgg8gh5hDxCHiGPkEfII8mzaoQJ5rtsIEGGFjroIfIYeYw8ljwnWgMJMrTQQQ8DjDBB5DnJ8ypBhhY66GGAEUpeUPNdbyBBhhY66KHkJTXCBCUvi8FAggwtdNDDcDeif9T1ZLQhHaIaYIQYKMlARNqg0uDSkLFIX3ZypeFLQ9JI5zFFjJNSaWRtzHNdlWW+vYxtq6v8Zd3Lv+HcjO1wqVbD1Pd19avpp1unz3Mz3Lw0o9yVyHY4iBJ47PpWW3P9rDbvS2VxoFhe/6Pcf70+POqDX1Jv6TF+XlKfy/jW0IJ65wPqXbRL6rNDvecl9d7mUu/Du/r4c/WyeZYXIPvnywx+PSCXGZQNNvx/gGzTzwCySwIoPp/Af/cJ3v0Esv+YBDlLyizKdv+asJGLZt+Nfx1os0aNXbPrW1wep2H/cvfy+1zulAPxPJ727WEaW016norysZalX1vmTV3JbrSmRDVlkis9sNacueYc9ZK0L1vp6zezPtof",
  "file_map": {
    "5": {
      "source": "use crate::meta::derive_via;\n\n#[derive_via(derive_eq)]\n// docs:start:eq-trait\npub trait Eq {\n    fn eq(self, other: Self) -> bool;\n}\n// docs:end:eq-trait\n\n// docs:start:derive_eq\ncomptime fn derive_eq(s: TypeDefinition) -> Quoted {\n    let signature = quote { fn eq(_self: Self, _other: Self) -> bool };\n    let for_each_field = |name| quote { (_self.$name == _other.$name) };\n    let body = |fields| {\n        if s.fields_as_written().len() == 0 {\n            quote { true }\n        } else {\n            fields\n        }\n    };\n    crate::meta::make_trait_impl(\n        s,\n        quote { Eq },\n        signature,\n        for_each_field,\n        quote { & },\n        body,\n    )\n}\n// docs:end:derive_eq\n\nimpl Eq for Field {\n    fn eq(self, other: Field) -> bool {\n        self == other\n    }\n}\n\nimpl Eq for u128 {\n    fn eq(self, other: u128) -> bool {\n        self == other\n    }\n}\nimpl Eq for u64 {\n    fn eq(self, other: u64) -> bool {\n        self == other\n    }\n}\nimpl Eq for u32 {\n    fn eq(self, other: u32) -> bool {\n        self == other\n    }\n}\nimpl Eq for u16 {\n    fn eq(self, other: u16) -> bool {\n        self == other\n    }\n}\nimpl Eq for u8 {\n    fn eq(self, other: u8) -> bool {\n        self == other\n    }\n}\nimpl Eq for u1 {\n    fn eq(self, other: u1) -> bool {\n        self == other\n    }\n}\n\nimpl Eq for i8 {\n    fn eq(self, other: i8) -> bool {\n        self == other\n    }\n}\nimpl Eq for i16 {\n    fn eq(self, other: i16) -> bool {\n        self == other\n    }\n}\nimpl Eq for i32 {\n    fn eq(self, other: i32) -> bool {\n        self == other\n    }\n}\nimpl Eq for i64 {\n    fn eq(self, other: i64) -> bool {\n        self == other\n    }\n}\n\nimpl Eq for () {\n    fn eq(_self: Self, _other: ()) -> bool {\n        true\n    }\n}\nimpl Eq for bool {\n    fn eq(self, other: bool) -> bool {\n        self == other\n    }\n}\n\nimpl<T, let N: u32> Eq for [T; N]\nwhere\n    T: Eq,\n{\n    fn eq(self, other: [T; N]) -> bool {\n        let mut result = true;\n        for i in 0..self.len() {\n            result &= self[i].eq(other[i]);\n        }\n        result\n    }\n}\n\nimpl<T> Eq for [T]\nwhere\n    T: Eq,\n{\n    fn eq(self, other: [T]) -> bool {\n        let mut result = self.len() == other.len();\n        for i in 0..self.len() {\n            result &= self[i].eq(other[i]);\n        }\n        result\n    }\n}\n\nimpl<let N: u32> Eq for str<N> {\n    fn eq(self, other: str<N>) -> bool {\n        let self_bytes = self.as_bytes();\n        let other_bytes = other.as_bytes();\n        self_bytes == other_bytes\n    }\n}\n\nimpl<A, B> Eq for (A, B)\nwhere\n    A: Eq,\n    B: Eq,\n{\n    fn eq(self, other: (A, B)) -> bool {\n        self.0.eq(other.0) & self.1.eq(other.1)\n    }\n}\n\nimpl<A, B, C> Eq for (A, B, C)\nwhere\n    A: Eq,\n    B: Eq,\n    C: Eq,\n{\n    fn eq(self, other: (A, B, C)) -> bool {\n        self.0.eq(other.0) & self.1.eq(other.1) & self.2.eq(other.2)\n    }\n}\n\nimpl<A, B, C, D> Eq for (A, B, C, D)\nwhere\n    A: Eq,\n    B: Eq,\n    C: Eq,\n    D: Eq,\n{\n    fn eq(self, other: (A, B, C, D)) -> bool {\n        self.0.eq(other.0) & self.1.eq(other.1) & self.2.eq(other.2) & self.3.eq(other.3)\n    }\n}\n\nimpl<A, B, C, D, E> Eq for (A, B, C, D, E)\nwhere\n    A: Eq,\n    B: Eq,\n    C: Eq,\n    D: Eq,\n    E: Eq,\n{\n    fn eq(self, other: (A, B, C, D, E)) -> bool {\n        self.0.eq(other.0)\n            & self.1.eq(other.1)\n            & self.2.eq(other.2)\n            & self.3.eq(other.3)\n            & self.4.eq(other.4)\n    }\n}\n\nimpl Eq for Ordering {\n    fn eq(self, other: Ordering) -> bool {\n        self.result == other.result\n    }\n}\n\n// Noir doesn't have enums yet so we emulate (Lt | Eq | Gt) with a struct\n// that has 3 public functions for constructing the struct.\npub struct Ordering {\n    result: Field,\n}\n\nimpl Ordering {\n    // Implementation note: 0, 1, and 2 for Lt, Eq, and Gt are built\n    // into the compiler, do not change these without also updating\n    // the compiler itself!\n    pub fn less() -> Ordering {\n        Ordering { result: 0 }\n    }\n\n    pub fn equal() -> Ordering {\n        Ordering { result: 1 }\n    }\n\n    pub fn greater() -> Ordering {\n        Ordering { result: 2 }\n    }\n}\n\n#[derive_via(derive_ord)]\n// docs:start:ord-trait\npub trait Ord {\n    fn cmp(self, other: Self) -> Ordering;\n}\n// docs:end:ord-trait\n\n// docs:start:derive_ord\ncomptime fn derive_ord(s: TypeDefinition) -> Quoted {\n    let signature = quote { fn cmp(_self: Self, _other: Self) -> std::cmp::Ordering };\n    let for_each_field = |name| quote {\n        if result == std::cmp::Ordering::equal() {\n            result = _self.$name.cmp(_other.$name);\n        }\n    };\n    let body = |fields| quote {\n        let mut result = std::cmp::Ordering::equal();\n        $fields\n        result\n    };\n    crate::meta::make_trait_impl(s, quote { Ord }, signature, for_each_field, quote {}, body)\n}\n// docs:end:derive_ord\n\n// Note: Field deliberately does not implement Ord\n\nimpl Ord for u128 {\n    fn cmp(self, other: u128) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\nimpl Ord for u64 {\n    fn cmp(self, other: u64) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for u32 {\n    fn cmp(self, other: u32) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for u16 {\n    fn cmp(self, other: u16) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for u8 {\n    fn cmp(self, other: u8) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for i8 {\n    fn cmp(self, other: i8) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for i16 {\n    fn cmp(self, other: i16) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for i32 {\n    fn cmp(self, other: i32) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for i64 {\n    fn cmp(self, other: i64) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for () {\n    fn cmp(_self: Self, _other: ()) -> Ordering {\n        Ordering::equal()\n    }\n}\n\nimpl Ord for bool {\n    fn cmp(self, other: bool) -> Ordering {\n        if self {\n            if other {\n                Ordering::equal()\n            } else {\n                Ordering::greater()\n            }\n        } else if other {\n            Ordering::less()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl<T, let N: u32> Ord for [T; N]\nwhere\n    T: Ord,\n{\n    // The first non-equal element of both arrays determines\n    // the ordering for the whole array.\n    fn cmp(self, other: [T; N]) -> Ordering {\n        let mut result = Ordering::equal();\n        for i in 0..self.len() {\n            if result == Ordering::equal() {\n                result = self[i].cmp(other[i]);\n            }\n        }\n        result\n    }\n}\n\nimpl<T> Ord for [T]\nwhere\n    T: Ord,\n{\n    // The first non-equal element of both arrays determines\n    // the ordering for the whole array.\n    fn cmp(self, other: [T]) -> Ordering {\n        let mut result = self.len().cmp(other.len());\n        for i in 0..self.len() {\n            if result == Ordering::equal() {\n                result = self[i].cmp(other[i]);\n            }\n        }\n        result\n    }\n}\n\nimpl<A, B> Ord for (A, B)\nwhere\n    A: Ord,\n    B: Ord,\n{\n    fn cmp(self, other: (A, B)) -> Ordering {\n        let result = self.0.cmp(other.0);\n\n        if result != Ordering::equal() {\n            result\n        } else {\n            self.1.cmp(other.1)\n        }\n    }\n}\n\nimpl<A, B, C> Ord for (A, B, C)\nwhere\n    A: Ord,\n    B: Ord,\n    C: Ord,\n{\n    fn cmp(self, other: (A, B, C)) -> Ordering {\n        let mut result = self.0.cmp(other.0);\n\n        if result == Ordering::equal() {\n            result = self.1.cmp(other.1);\n        }\n\n        if result == Ordering::equal() {\n            result = self.2.cmp(other.2);\n        }\n\n        result\n    }\n}\n\nimpl<A, B, C, D> Ord for (A, B, C, D)\nwhere\n    A: Ord,\n    B: Ord,\n    C: Ord,\n    D: Ord,\n{\n    fn cmp(self, other: (A, B, C, D)) -> Ordering {\n        let mut result = self.0.cmp(other.0);\n\n        if result == Ordering::equal() {\n            result = self.1.cmp(other.1);\n        }\n\n        if result == Ordering::equal() {\n            result = self.2.cmp(other.2);\n        }\n\n        if result == Ordering::equal() {\n            result = self.3.cmp(other.3);\n        }\n\n        result\n    }\n}\n\nimpl<A, B, C, D, E> Ord for (A, B, C, D, E)\nwhere\n    A: Ord,\n    B: Ord,\n    C: Ord,\n    D: Ord,\n    E: Ord,\n{\n    fn cmp(self, other: (A, B, C, D, E)) -> Ordering {\n        let mut result = self.0.cmp(other.0);\n\n        if result == Ordering::equal() {\n            result = self.1.cmp(other.1);\n        }\n\n        if result == Ordering::equal() {\n            result = self.2.cmp(other.2);\n        }\n\n        if result == Ordering::equal() {\n            result = self.3.cmp(other.3);\n        }\n\n        if result == Ordering::equal() {\n            result = self.4.cmp(other.4);\n        }\n\n        result\n    }\n}\n\n// Compares and returns the maximum of two values.\n//\n// Returns the second argument if the comparison determines them to be equal.\n//\n// # Examples\n//\n// ```\n// use std::cmp;\n//\n// assert_eq(cmp::max(1, 2), 2);\n// assert_eq(cmp::max(2, 2), 2);\n// ```\npub fn max<T>(v1: T, v2: T) -> T\nwhere\n    T: Ord,\n{\n    if v1 > v2 {\n        v1\n    } else {\n        v2\n    }\n}\n\n// Compares and returns the minimum of two values.\n//\n// Returns the first argument if the comparison determines them to be equal.\n//\n// # Examples\n//\n// ```\n// use std::cmp;\n//\n// assert_eq(cmp::min(1, 2), 1);\n// assert_eq(cmp::min(2, 2), 2);\n// ```\npub fn min<T>(v1: T, v2: T) -> T\nwhere\n    T: Ord,\n{\n    if v1 > v2 {\n        v2\n    } else {\n        v1\n    }\n}\n\nmod cmp_tests {\n    use crate::cmp::{max, min};\n\n    #[test]\n    fn sanity_check_min() {\n        assert_eq(min(0 as u64, 1 as u64), 0);\n        assert_eq(min(0 as u64, 0 as u64), 0);\n        assert_eq(min(1 as u64, 1 as u64), 1);\n        assert_eq(min(255 as u8, 0 as u8), 0);\n    }\n\n    #[test]\n    fn sanity_check_max() {\n        assert_eq(max(0 as u64, 1 as u64), 1);\n        assert_eq(max(0 as u64, 0 as u64), 0);\n        assert_eq(max(1 as u64, 1 as u64), 1);\n        assert_eq(max(255 as u8, 0 as u8), 255);\n    }\n}\n",
      "path": "std/cmp.nr"
    },
    "50": {
      "source": "struct Bar {\n    inner: [u8; 3],\n}\n\nstruct Foo {\n    a: Field,\n    b: [Field; 3],\n    bar: Bar,\n}\n\nfn main(mut x: [Foo; 3], y: pub Field, hash_result: pub [u8; 32]) {\n    // Simple dynamic array set for entire inner most array\n    x[y - 1].bar.inner = [106, 107, 10];\n    let mut hash_input = x[y - 1].bar.inner;\n    // Make sure that we are passing a dynamic array to the black box function call\n    // by setting the array using a dynamic index here\n    hash_input[y - 1] = 0;\n    let hash = std::hash::blake3(hash_input);\n    assert_eq(hash, hash_result);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
